--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "lucide-react": "^0.468.0",
+    "matter-attractors": "^0.1.6",
+    "matter-js": "^0.20.0",
+    "matter-wrap": "^0.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -18,12 +22,14 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.15.0",
+    "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.15.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
     "vite": "^6.0.1"
   }
 }
